[tool.poetry]
name = "tibillet-doc"
version = "3.0.0"
description = "Documentation for TiBillet"
authors = ["Kay Navarro <com-libre@kayathommy.fr>"]
license = "CC-BY-SA"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.33"}
mkdocs-glightbox = "^0.4.0"
mkdocs-static-i18n = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
